transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: transmission
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: downloads
          hostPath:
            path: /var/hombernetes/downloads
            type: Directory
      containers:
      - image: ghcr.io/linuxserver/transmission
        name: transmission
        ports:
        - containerPort: 9091
        - containerPort: 51413
          protocol: TCP
        - containerPort: 51413
          protocol: UDP
        volumeMounts:
        - mountPath: /downloads
          name: downloads
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 9091
          timeoutSeconds: 2
